--- a/lib/projects.json
+++ b/lib/projects.json
@@ -3,72 +3,84 @@
         "title": "Food Processing Analysis",
         "year": 2025,
         "image": "/portfolio/images/food_distribution.png",
+        "url": "",
         "description": "An analysis of Food Processing (NOVA) scores across three major U.S. supermarkets. "
     },
     {
         "title": "Bus Routes in San Diego",
         "year": 2025,
         "image": "/portfolio/images/bus_routes_proj.png",
+        "url": "",
         "description": "Et dicta vitae ullam ipsa dolorem, eos, expedita dolores, tempora sint obcaecati corporis necessitatibus iure autem aliquam placeat."
     },
     {
         "title": "Understanding Power Outages Across the U.S.",
-        "year": 2025,
+        "year": 2024,
         "image": "/portfolio/images/power_outages.png",
+        "url": "",
         "description": "Exploratory Data Analysis of major power outages accross the U.S"
     },
     {
-        "title": "Qui doloribus non tempore?",
-        "year": 2020,
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Et dicta vitae ullam ipsa dolorem, eos, expedita dolores, tempora sint obcaecati corporis necessitatibus iure autem aliquam placeat. Facere perferendis molestiae, quasi at asperiores explicabo dignissimos laboriosam hic numquam consequatur?"
+        "title": "Bikewatching in Boston",
+        "year": 2025,
+        "image": "/portfolio/images/boston_bike.png",
+        "url": "https://rinconjm.github.io/boston_bikewatching/",
+        "description": "An interactive map visualization of bike traffic in Boston."
     },
     {
         "title": "Eveniet rerum minus illum.",
         "year": 2021,
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "url": "",
         "description": "Libero, facilis! Temporibus aspernatur deleniti similique qui facere possimus eaque nulla officia atque officiis, dolorum ea id, placeat alias voluptatum iusto odio beatae dolores quae? Molestiae magnam tempora officiis dolorem!"
     },
     {
         "title": "Culpa repellat perferendis asperiores?",
         "year": 2024,
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "url": "",
         "description": "Fuga doloremque ex voluptatum commodi quasi tempore perferendis soluta iste necessitatibus, quo sed adipisci minus cupiditate alias porro perspiciatis possimus quae iusto. Ratione, natus? Velit ex quas unde cumque quod."
     },
     {
         "title": "Aperiam et quidem perferendis!",
         "year": 2024,
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "url": "",
         "description": "Animi accusantium perferendis pariatur aperiam eos mollitia hic ad aspernatur deleniti soluta modi voluptatum necessitatibus placeat consectetur distinctio ab quidem quas fugiat consequatur dolores quaerat corrupti dolorem, ipsam inventore. Natus?"
     },
     {
         "title": "Consequuntur error suscipit natus?",
         "year": 2025,
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "url": "",
         "description": "Voluptatem repellat sint cupiditate nobis omnis delectus blanditiis eos consequatur voluptates! Consectetur, dicta expedita mollitia repudiandae quisquam blanditiis amet! Natus et provident neque iure totam ipsam eos nisi perferendis dolores."
     },
     {
         "title": "Facilis ipsam alias blanditiis?",
         "year": 2022,
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "url": "",
         "description": "Illum esse dolore minima amet officiis maxime. Consequatur architecto ut quidem fuga, harum dolores vitae commodi vel tempore voluptate rerum dolore dolorum voluptas aspernatur ducimus porro, soluta enim ratione sapiente."
     },
     {
         "title": "Rerum illo saepe placeat?",
         "year": 2020,
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "url": "",
         "description": "Perspiciatis molestiae fugiat dolorum culpa ex incidunt nemo maiores? Odio nisi provident repellat praesentium, odit id amet nulla itaque reprehenderit sunt quas molestiae aliquam debitis officiis consectetur recusandae minus quos."
     },
     {
         "title": "Sed magni ullam cumque!",
         "year": 2021,
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "url": "",
         "description": "Iure eaque nulla ratione aspernatur minus ipsum ducimus nisi reiciendis similique doloremque ipsam quidem, est cum, magni deleniti saepe assumenda officiis. Beatae ut quidem provident illum optio commodi cum odit."
     },
     {
         "title": "Eligendi maxime natus aliquam.",
         "year": 2024,
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "url": "",
         "description": "Dolor maxime earum, facere labore quam ratione voluptate ducimus distinctio? Similique sequi pariatur temporibus. Dolor quis non assumenda ipsa, nisi est a dolore cupiditate, fuga iste quaerat. Distinctio, necessitatibus cumque!"
     }
 ]
